--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,4 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Teko&display=swap");
+
 .container {
+  margin-top: 3.1rem; /* mandatory to prevent content from being hidden under navbar */
   min-height: 90vh;
   padding: 0 0.5rem;
   display: flex;
@@ -6,4 +9,37 @@
   justify-content: center;
   align-items: center;
   height: 90vh;
+}
+
+.homeMenuBox {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: url("/images/geometric-2.png");
+
+  /* width: 80vw;
+  height: 60vh; */
+}
+
+.butn {
+  /* font-family: 'Teko', sans-serif; */
+  font-family: 'Roboto Condensed', sans-serif;
+  color: white;
+  /* border: 2px solid white; */
+  background-color: rgba(255, 255, 255, 0.35);
+  letter-spacing: 0.03rem;
+  /* font-size: 1.5rem; */
+  font-weight: bold;
+  border-radius: 0.5rem;
+  padding: 0.5rem;
+  margin: 1rem;
+  transition: all 0.5s ease;
+}
+.butn:hover {
+  color: black;
+  background-color: rgba(255, 255, 255, 0.75);
+}
+.borderButn {
+  border: 2px solid white;
 }
