--- a/styles/NewEdit.module.css
+++ b/styles/NewEdit.module.css
@@ -1,6 +1,8 @@
 .container {
-  margin-top: 4rem; /* mandatory to prevent content from being hidden under navbar */
+  margin-top: 3.1rem; /* mandatory to prevent content from being hidden under navbar */
+  min-height: 90vh;
   padding: 0.5rem 0.5rem;
+  height: 90vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -9,7 +11,7 @@
 .title {
   text-align: center;
 }
-.addNewForm {
+.editForm {
   border-radius: 0.5rem;
   background-color: #e6e6e6;
   border: 1px solid #404040;
@@ -23,15 +25,15 @@
   justify-content: center;
   margin-bottom: 1rem;
 }
-.addNewForm > label > input,
-.addNewForm > label > select,
-.addNewForm > label > textarea {
+.editForm > label > input,
+.editForm > label > select,
+.editForm > label > textarea {
   margin: 0.1rem;
   padding: 0.1rem;
   font-size: 1rem;
 }
 
-.addNewForm > label {
+.editForm > label {
   font-weight: bold;
   font-family: 'Roboto Condensed', sans-serif;
   width: 100%;
