--- a/styles/NewEdit.module.css
+++ b/styles/NewEdit.module.css
@@ -1,8 +1,9 @@
 .container {
   margin-top: 3.1rem; /* mandatory to prevent content from being hidden under navbar */
-  min-height: 90vh;
+  margin-bottom: 1rem;
   padding: 0.5rem 0.5rem;
-  height: 90vh;
+  /* min-height: 90vh;
+  height: 90vh; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -11,6 +12,56 @@
 .title {
   text-align: center;
 }
+.sideNav {
+  position: fixed;
+  top: 50%;
+  left: 20px;
+  display: flex;
+  flex-direction: column;
+}
+.sideNavButn {
+  font-size: 1.5rem;
+  margin: 0.5rem;
+  color: gray;
+}
+.sideNavButn:hover {
+  cursor: pointer;
+  color: #000099;
+}
+
+.memoBox {
+  position: fixed;
+  top: 200px;
+  left: 10%;
+  width: 80%;
+  z-index: 10;
+  border: 2px solid #006600;
+  background-color: #80ff80;
+  font-size: 1rem;
+  font-weight: bold;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+.memoBox > p {
+  margin: auto;
+  font-size: 1.2rem;
+}
+.memoBox > button {
+  border: none;
+  background-color: #80ff80;
+  color: #006600;
+  font-size: 1.75rem;
+  transition: all 0.5s linear;
+  margin: 0.5rem;
+}
+.memoBox > button:hover {
+  color: #001a00;
+  transform: scale(1.2);
+  cursor: pointer;
+}
+
 .editForm {
   border-radius: 0.5rem;
   background-color: #e6e6e6;
@@ -53,21 +104,41 @@
 .redSpan {
   color: #e60000;
 }
+.copySpan {
+  color: #000099;
+}
+.copySpan:hover {
+  cursor: pointer;
+  color: #8080ff;
+  /* text-decoration: underline; */
+}
+.copySpan:active {
+  color: #ff9900;
+}
+
+.redWarning {
+  text-align: center;
+  color: #e60000;
+}
 
 .butnBox {
-  margin: auto;
+  margin: 1rem auto;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
 .redButn {
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 1.2rem;
   color: black;
-  border: 2px solid #4d0000;
-  background-color: #ff8080;
-  box-shadow: -2px -2px 3px inset #e60000, 3px 3px 4px inset #ffe6e6;
   font-weight: bold;
   border-radius: 0.5rem;
   padding: 0.25rem;
   margin: 1rem 1rem;
+  border: 2px solid #4d0000;
+  background-color: #ff8080;
+  box-shadow: -2px -2px 3px inset #e60000, 3px 3px 4px inset #ffe6e6;
 }
 .redButn:hover {
   background-color: #e60000;
@@ -78,15 +149,44 @@
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 1.2rem;
   color: black;
-  border: 2px solid #000099;
-  background-color: #99ccff;
-  box-shadow: -2px -2px 3px inset #0052cc, 3px 3px 4px inset #e6f2ff;
   font-weight: bold;
   border-radius: 0.5rem;
   padding: 0.25rem;
   margin: 1rem 1rem;
+  border: 2px solid #000099;
+  background-color: #99ccff;
+  box-shadow: -2px -2px 3px inset #0052cc, 3px 3px 4px inset #e6f2ff;
 }
 .bluButn:hover {
   background-color: #0052cc;
   color: white;
 }
+.grnButn {
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 1.2rem;
+  color: black;
+  font-weight: bold;
+  border-radius: 0.5rem;
+  padding: 0.25rem;
+  margin: 1rem 1rem;
+  border: 2px solid #004d00;
+  background-color: #66ff66;
+  box-shadow: -2px -2px 3px inset #00b300, 3px 3px 4px inset #e6ffe6;
+}
+.grnButn:hover {
+  background-color: #008000;
+  color: white;
+}
+
+/* .deleteWarning {
+  margin-bottom: 1rem;
+  padding: 0.5rem 0.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  border-radius: 0.5rem;
+  background-color: #e6e6e6;
+  border: 1px solid #404040;
+  min-width: 70vw;
+} */
