--- a/styles/NewEdit.module.css
+++ b/styles/NewEdit.module.css
@@ -14,7 +14,7 @@
 }
 .sideNav {
   position: fixed;
-  top: 50%;
+  top: 40%;
   left: 20px;
   display: flex;
   flex-direction: column;
@@ -31,12 +31,12 @@
 
 .memoBox {
   position: fixed;
-  top: 200px;
+  top: 30%;
   left: 10%;
   width: 80%;
   z-index: 10;
   border: 2px solid #006600;
-  background-color: #80ff80;
+  background-color: #33ff33;
   font-size: 1rem;
   font-weight: bold;
   display: flex;
@@ -50,7 +50,7 @@
 }
 .memoBox > button {
   border: none;
-  background-color: #80ff80;
+  background-color: rgba(0,0,0,0);
   color: #006600;
   font-size: 1.75rem;
   transition: all 0.5s linear;
