--- a/styles/Upload.module.css
+++ b/styles/Upload.module.css
@@ -1,15 +1,52 @@
 .container {
-  margin-top: 5rem; /* mandatory to prevent content from being hidden under navbar */
+  margin-top: 3rem; /* mandatory to prevent content from being hidden under navbar */
   min-height: 90vh;
   padding: 0 0.5rem;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   height: 90vh;
 }
 .title {
   text-align: center;
+  margin-bottom: 0.5rem;
+}
+.directions > a {
+  color: #000099;
+  /* border: 2px solid #000099;
+  background-color: #99ccff;
+  box-shadow: -2px -2px 3px inset #0052cc, 3px 3px 4px inset #e6f2ff; */
+  font-weight: bold;
+  text-decoration: underline;
+  /* border-radius: 0.5rem;
+  padding: 0.25rem; */
+}
+ .directions > a:hover {
+  /* background-color: #0052cc; */
+  color: magenta;
+  cursor: pointer;
+}
+
+.uploadForm {
+  padding: 2rem 1rem;
+  margin: 0.25rem;
+  border-radius: 0.5rem;
+  background-color: #e6e6e6;
+  border: 1px solid #404040;
+  box-shadow: 3px 3px 3px 1px rgba(0, 0, 0, .2);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.warning {
+  color: #e60000;
+  font-weight: bold;
+  margin-bottom: 0;
+}
+.emphasis {
+  font-style: italic;
 }
 .bluButn {
   font-family: 'Roboto Condensed', sans-serif;
@@ -28,3 +65,12 @@
   color: white;
   cursor: pointer;
 }
+.bluButn:disabled {
+  border: 2px solid black;
+  background-color: #bfbfbf;
+  box-shadow: -2px -2px 3px inset #595959, 3px 3px 4px inset #f2f2f2;
+  color: #808080;
+}
+/* .bluButn:disabled:hover {
+
+} */
