--- a/styles/Reminder.module.css
+++ b/styles/Reminder.module.css
@@ -93,10 +93,10 @@
   justify-content: flex-start;
   align-items: center;
 }
-.dotDivHolder > img {
+/* .dotDivHolder > img {
   width: 20px;
   height: 20px;
-}
+} */
 .dotDivHolder > p {
   margin: 0.15rem;
 }
