--- a/styles/Upload.module.css
+++ b/styles/Upload.module.css
@@ -1,10 +1,10 @@
 .container {
-  margin-top: 3rem; /* mandatory to prevent content from being hidden under navbar */
+  margin-top: 5rem; /* mandatory to prevent content from being hidden under navbar */
   min-height: 90vh;
   padding: 0 0.5rem;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   height: 90vh;
 }
