removed apostrophes, page-level font imports

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Teko&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Teko&display=swap"); */
 
 .container {
   margin-top: 3.1rem; /* mandatory to prevent content from being hidden under navbar */
