--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -1,5 +1,5 @@
 
-@import url("https://fonts.googleapis.com/css2?family=Teko&display=swap");
+/* @import url("https://fonts.googleapis.com/css2?family=Teko&display=swap"); */
 
 
 .navContainer {
