--- a/styles/NewEdit.module.css
+++ b/styles/NewEdit.module.css
@@ -106,6 +106,7 @@
 }
 .copySpan {
   color: #000099;
+  transition: all 0.25s ease;
 }
 .copySpan:hover {
   cursor: pointer;
@@ -114,6 +115,7 @@
 }
 .copySpan:active {
   color: #ff9900;
+  font-size: 1.1rem;
 }
 
 .redWarning {
